--- a/Shopping/Views/Home/Index.cshtml
+++ b/Shopping/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model List<Shopping.Domain.Entities.Product>
+@{
     ViewBag.Title = "Home Page";
     Layout = "~/Views/Shared/_HomeLayout.cshtml";
 }
@@ -57,55 +58,58 @@
 
             <!--Grid row-->
             <div class="row wow fadeIn">
+                @foreach (var product in Model)
+                {
+                    <!--Grid column-->
+                    <div class="col-lg-3 col-md-6 mb-4">
 
-                <!--Grid column-->
-                <div class="col-lg-3 col-md-6 mb-4">
+                        <!--Card-->
+                        <div class="card">
 
-                    <!--Card-->
-                    <div class="card">
+                            <!--Card image-->
+                            <div class="view overlay">
+                                <img src="@product.ProductImage" class="card-img-top" alt="">
+                                <a>
+                                    <div class="mask rgba-white-slight"></div>
+                                </a>
+                            </div>
+                            <!--Card image-->
+                            <!--Card content-->
+                            <div class="card-body text-center">
+                                <!--Category & Title-->
+                                <a href="" class="grey-text">
+                                    <h5>Shirt</h5>
+                                </a>
+                                <h5>
+                                    <strong>
+                                        <a href="" class="dark-grey-text">
+                                            Denim shirt
+                                            <span class="badge badge-pill danger-color">NEW</span>
+                                        </a>
+                                    </strong>
+                                </h5>
 
-                        <!--Card image-->
-                        <div class="view overlay">
-                            <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/12.jpg" class="card-img-top" alt="">
-                            <a>
-                                <div class="mask rgba-white-slight"></div>
-                            </a>
+                                <h4 class="font-weight-bold blue-text">
+                                    <strong>120$</strong>
+                                </h4>
+
+                            </div>
+                            <!--Card content-->
+                            <div class="card-footer text-center">
+                                <button class="btn btn-outline-brown">Add to cart</button>
+                            </div>
                         </div>
-                        <!--Card image-->
-                        <!--Card content-->
-                        <div class="card-body text-center">
-                            <!--Category & Title-->
-                            <a href="" class="grey-text">
-                                <h5>Shirt</h5>
-                            </a>
-                            <h5>
-                                <strong>
-                                    <a href="" class="dark-grey-text">
-                                        Denim shirt
-                                        <span class="badge badge-pill danger-color">NEW</span>
-                                    </a>
-                                </strong>
-                            </h5>
+                        <!--Card-->
 
-                            <h4 class="font-weight-bold blue-text">
-                                <strong>120$</strong>
-                            </h4>
-
-                        </div>
-                        <!--Card content-->
-                        <div class="card-footer text-center">
-                            <button class="btn btn-outline-brown">Add to cart</button>
-                        </div>
                     </div>
-                    <!--Card-->
+                    <!--Grid column-->
+                }
 
-                </div>
-                <!--Grid column-->
 
             </div>
             <!--Grid row-->
 
-            
+
 
         </section>
         <!--Section: Products v.3-->
